--- a/afternoon_solns.ipynb
+++ b/afternoon_solns.ipynb
@@ -57,7 +57,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data_raw = sc.textFile('s3n://newsgroup/news.txt')"
+      "data_raw = sc.textFile('s3n://sparkdatasets/news.txt')"
      ],
      "language": "python",
      "metadata": {},
@@ -298,7 +298,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "inp = sc.textFile('/Users/jeffreytang/Desktop/zipfian/spring2015/spark/data/text8_lines').map(lambda row: row.split(\" \"))\n",
+      "inp = sc.textFile('s3n://sparkdatasets/text8_lines').map(lambda row: row.split(\" \"))\n",
       "word2vec = Word2Vec()\n",
       "model = word2vec.fit(inp)"
      ],
