Added afternoon content to lecture_notes.

--- a/lecture_notes.ipynb
+++ b/lecture_notes.ipynb
@@ -47,13 +47,13 @@
     "Spark Version History\n",
     "---------------------\n",
     "\n",
-    "Date                Version         Changes\n",
-    "----                -------         -------\n",
-    "May 30, 2014        Spark 1.0.0     APIs stabilized \n",
-    "September 11, 2014  Spark 1.1.0     New functions in MLlib, Spark SQL\n",
-    "December 18, 2014   Spark 1.2.0     Python Streaming API and better streaming fault tolerance\n",
-    "March 13, 2015      Spark 1.3.0     DataFrame API, Kafka integration in Streaming\n",
-    "April 17, 2015      Spark 1.3.1     Bug fixes, minor changes\n",
+    "Date               |Version        |Changes\n",
+    "----               |-------        |-------\n",
+    "May 30, 2014       |Spark 1.0.0    |APIs stabilized \n",
+    "September 11, 2014 |Spark 1.1.0    |New functions in MLlib, Spark SQL\n",
+    "December 18, 2014  |Spark 1.2.0    |Python Streaming API and better streaming fault tolerance\n",
+    "March 13, 2015     |Spark 1.3.0    |DataFrame API, Kafka integration in Streaming\n",
+    "April 17, 2015     |Spark 1.3.1    |Bug fixes, minor changes\n",
     "\n",
     "Matei Zaharia\n",
     "-------------\n",
@@ -1525,32 +1525,345 @@
     "5. For this reason `groupByKey` can be easier to program with.\n",
     "</details>\n",
     "\n",
+    "\n",
+    "Joins\n",
+    "-----\n",
+    "\n",
+    "Q: Given a table of employees and locations find the cities that the\n",
+    "employees live in.\n",
+    "\n",
+    "\n",
+    "- The easiest way to do this is with a `join`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Employees: emp_id, loc_id, name\n",
+    "employee_data = [\n",
+    "    (101, 014, 'Alice'),\n",
+    "    (102, 015, 'Bob'),\n",
+    "    (103, 014, 'Chad'),\n",
+    "    (104, 015, 'Jen'),\n",
+    "    (105, 013, 'Dee') ]\n",
+    "\n",
+    "# Locations: loc_id, location\n",
+    "location_data = [\n",
+    "    (014, 'SF'),\n",
+    "    (015, 'Seattle'),\n",
+    "    (016, 'Portland')]\n",
+    "\n",
+    "employees = sc.parallelize(employee_data)\n",
+    "locations = sc.parallelize(location_data)\n",
+    "\n",
+    "# Re-key employee records with loc_id\n",
+    "employees2 = employees.map(lambda (emp_id,loc_id,name):(loc_id,name));\n",
+    "\n",
+    "# Now join.\n",
+    "employees2.join(locations).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pop Quiz\n",
+    "--------\n",
+    "\n",
+    "<details><summary>\n",
+    "Q: How can we keep employees that don't have a valid location ID in\n",
+    "the final result?\n",
+    "</summary>\n",
+    "1. Use `leftOuterJoin` to keep employees without location IDs.\n",
+    "<br>\n",
+    "2. Use `rightOuterJoin` to keep locations without employees. \n",
+    "<br>\n",
+    "3. Use `fullOuterJoin` to keep both.\n",
+    "<br>\n",
+    "</details>\n",
+    "\n",
+    "\n",
+    "Caching and Persistence\n",
+    "=======================\n",
+    "\n",
+    "RDD Caching\n",
+    "-----------\n",
+    "\n",
+    "- Consider this Spark job."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max = 100000\n",
+    "%time rdd1 = sc.parallelize(xrange(max))\n",
+    "%time rdd2 = rdd1.map(lambda x:x*x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Until we execute an action the RDDs do nothing.\n",
+    "\n",
+    "- Now lets force execution of the RDD by calling an action on it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time c = rdd2.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Notice that Spark is not caching `rdd1` or `rdd2`.\n",
+    "\n",
+    "- The RDD does no work until an action is called. And then when an\n",
+    "  action is called it figures out the answer and then throw away all\n",
+    "  the data.\n",
+    "\n",
+    "- If you have an RDD that you are going to reuse in your computation\n",
+    "  you can use `cache()` to make Spark cache the RDD.\n",
+    "\n",
+    "RDD Caching\n",
+    "-----------\n",
+    "\n",
+    "Q: Repeat the previous computation with cache enabled on the RDDs.\n",
+    "\n",
+    "- Set up the RDDs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max = 100000\n",
+    "rdd1 = sc.parallelize(xrange(max))\n",
+    "rdd2 = rdd1.map(lambda x:x*x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Enable caching on `rdd1`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd1.cache();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Observe the performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time rdd2.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Enable caching on `rdd2`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd2.cache();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Observe the performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time rdd2.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes\n",
+    "-----\n",
+    "\n",
+    "- Calling `cache()` flips a flag on the RDD. \n",
+    "\n",
+    "- The data is not cached until an action is called.\n",
+    "\n",
+    "- You can uncache an RDD using `unpersist()`.\n",
+    "\n",
+    "Pop Quiz\n",
+    "--------\n",
+    "\n",
+    "<details><summary>\n",
+    "Q: Will `unpersist` uncache the RDD immediately or does it wait for an\n",
+    "action?\n",
+    "</summary>\n",
+    "It unpersists immediately.\n",
+    "</details>\n",
+    "\n",
+    "Caching and Persistence\n",
+    "-----------------------\n",
+    "\n",
+    "Q: Persist RDD to disk instead of caching it in memory.\n",
+    "\n",
+    "- You can cache RDDs at different levels.\n",
+    "\n",
+    "- Here is an example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyspark\n",
+    "rdd = sc.parallelize(xrange(100))\n",
+    "rdd.persist(pyspark.StorageLevel.DISK_ONLY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pop Quiz\n",
+    "--------\n",
+    "\n",
+    "<details><summary>\n",
+    "Q: Will the RDD be stored on disk at this point?\n",
+    "</summary>\n",
+    "No. It will get stored after we call an action.\n",
+    "</details>\n",
+    "\n",
+    "Persistence Levels\n",
+    "------------------\n",
+    "\n",
+    "Level                       Meaning\n",
+    "-----                       -------\n",
+    "`MEMORY_ONLY`               Same as `cache()`\n",
+    "`MEMORY_AND_DISK`           Cache in memory then overflow to disk\n",
+    "`MEMORY_AND_DISK_SER`       Like above; in cache keep objects serialized instead of live \n",
+    "`DISK_ONLY`                 Cache to disk not to memory\n",
+    "\n",
+    "Notes\n",
+    "-----\n",
+    "\n",
+    "- `MEMORY_AND_DISK_SER` is a good compromise between the levels. \n",
+    "\n",
+    "- Fast, but not too expensive.\n",
+    "\n",
+    "- Make sure you unpersist when you don't need the RDD any more.\n",
+    "\n",
+    "\n",
+    "Spark Performance\n",
+    "=================\n",
+    "\n",
+    "Narrow and Wide Transformations\n",
+    "-------------------------------\n",
+    "\n",
+    "- Spark transformations are *narrow* if each RDD has one unique child\n",
+    "  past the transformation.\n",
+    "\n",
+    "- Spark transformations are *wide* if each RDD can have multiple\n",
+    "  children past the transformation.\n",
+    "\n",
+    "- Narrow transformations are map-like, while wide transformations are\n",
+    "  reduce-like.\n",
+    "\n",
+    "- Narrow transformations are faster because they do move data between\n",
+    "  executors, while wide transformations are slower.\n",
+    " \n",
+    "Repartitioning\n",
+    "--------------\n",
+    "\n",
+    "- Over time partitions can get skewed. \n",
+    "\n",
+    "- Or you might have less data or more data than you started with.\n",
+    "\n",
+    "- You can rebalance your partitions using `repartition` or `coalesce`.\n",
+    "\n",
+    "- `coalesce` is narrow while `repartition` is wide.\n",
+    "\n",
+    "Pop Quiz\n",
+    "--------\n",
+    "\n",
+    "<details><summary>\n",
+    "Between `coalesce` and `repartition` which one is faster? Which one is\n",
+    "more effective?\n",
+    "</summary>\n",
+    "1. `coalesce` is narrow so it is faster. \n",
+    "<br>\n",
+    "2. However, it only combines partitions and does not shuffle them.\n",
+    "<br>\n",
+    "3. `repartition` is wide but it partitions more effectively because it\n",
+    "   reshuffles the records.\n",
+    "</details>\n",
+    "\n",
+    "Misc\n",
+    "====\n",
+    "\n",
+    "Amazon S3\n",
+    "---------\n",
+    "\n",
+    "- *\"s3:\" URLs break when Secret Key contains a slash, even if encoded*\n",
+    "    <https://issues.apache.org/jira/browse/HADOOP-3733>\n",
+    "\n",
+    "- *Spark 1.3.1 / Hadoop 2.6 prebuilt pacakge has broken S3 filesystem access*\n",
+    "    <https://issues.apache.org/jira/browse/SPARK-7442>\n",
+    "\n",
     "<!--\n",
-    "\n",
-    "Find Highest Revenue State\n",
-    "\n",
-    "Cache and Persist\n",
-    "\n",
-    "Checkpoint\n",
-    "\n",
-    "Narrow vs Wide Operations\n",
-    "\n",
-    "Partitions\n",
     "\n",
     "Broadcast Variables\n",
     "\n",
     "Accumulators\n",
     "\n",
-    "x = sc.parallelize(xrange(10)).filter(lambda x: x % 2 == 0).collect()\n",
+    "Checkpoint\n",
     "\n",
-    "x = sc.parallelize([1,2,3,4,5,5,1,3]).distinct().collect()\n",
+    "S3 key issue\n",
     "\n",
-    "x = sc.parallelize([1,2,3,4,5,5,1,3]).mean()\n",
-    "\n",
-    "x = sc.parallelize([1,2,3,4,5,5,1,3]).mean()\n",
-    "\n",
-    "\n",
-    "\n",
+    "2.6\n",
     "\n",
     "-->"
    ]
