--- a/lecture_notes.ipynb
+++ b/lecture_notes.ipynb
@@ -518,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max = 100000\n",
+    "max = 10000000\n",
     "%time sc.parallelize(xrange(max)).map(lambda x:x+1).count()"
    ]
   },
@@ -907,7 +907,7 @@
     "  .filter(lambda line: not line.startswith(\"#\")) \\\n",
     "  .map(lambda line: line.split(\",\")) \\\n",
     "  .map(lambda fields: (float(fields[-1]),fields[0])) \\\n",
-    "  .sortBy(lambda (close, date): close, ascending=False)\n",
+    "  .sortBy(lambda (close, date): close, ascending=False) \\\n",
     "  .take(1)"
    ]
   },
@@ -1123,7 +1123,7 @@
     "    .map(lambda x: x.split())\\\n",
     "    .filter(lambda x: not x[0].startswith('#'))\\\n",
     "    .map(lambda x: (x[-3],float(x[-1])))\\\n",
-    "    .collect()\n"
+    "    .collect()"
    ]
   },
   {
@@ -1362,7 +1362,9 @@
    "outputs": [],
    "source": [
     "def badGetCity(client):\n",
-    "    return client[2][1]"
+    "    return client[2][1]\n",
+    "\n",
+    "getCity(client)"
    ]
   },
   {
@@ -1544,17 +1546,17 @@
    "source": [
     "# Employees: emp_id, loc_id, name\n",
     "employee_data = [\n",
-    "    (101, 014, 'Alice'),\n",
-    "    (102, 015, 'Bob'),\n",
-    "    (103, 014, 'Chad'),\n",
-    "    (104, 015, 'Jen'),\n",
-    "    (105, 013, 'Dee') ]\n",
+    "    (101, 14, 'Alice'),\n",
+    "    (102, 15, 'Bob'),\n",
+    "    (103, 14, 'Chad'),\n",
+    "    (104, 15, 'Jen'),\n",
+    "    (105, 13, 'Dee') ]\n",
     "\n",
     "# Locations: loc_id, location\n",
     "location_data = [\n",
-    "    (014, 'SF'),\n",
-    "    (015, 'Seattle'),\n",
-    "    (016, 'Portland')]\n",
+    "    (14, 'SF'),\n",
+    "    (15, 'Seattle'),\n",
+    "    (16, 'Portland')]\n",
     "\n",
     "employees = sc.parallelize(employee_data)\n",
     "locations = sc.parallelize(location_data)\n",
@@ -1601,18 +1603,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max = 100000\n",
-    "%time rdd1 = sc.parallelize(xrange(max))\n",
-    "%time rdd2 = rdd1.map(lambda x:x*x)"
+    "import random\n",
+    "num_count = 500*1000\n",
+    "num_list = [random.random() for i in xrange(num_count)]\n",
+    "rdd1 = sc.parallelize(num_list)\n",
+    "rdd2 = rdd1.sortBy(lambda num: num)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Until we execute an action the RDDs do nothing.\n",
-    "\n",
-    "- Now lets force execution of the RDD by calling an action on it."
+    "- Lets time running `count()` on `rdd2`."
    ]
   },
   {
@@ -1621,28 +1623,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time c = rdd2.count()"
+    "%time rdd2.count()\n",
+    "%time rdd2.count()\n",
+    "%time rdd2.count()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Notice that Spark is not caching `rdd1` or `rdd2`.\n",
-    "\n",
     "- The RDD does no work until an action is called. And then when an\n",
-    "  action is called it figures out the answer and then throw away all\n",
+    "  action is called it figures out the answer and then throws away all\n",
     "  the data.\n",
     "\n",
     "- If you have an RDD that you are going to reuse in your computation\n",
     "  you can use `cache()` to make Spark cache the RDD.\n",
     "\n",
-    "RDD Caching\n",
-    "-----------\n",
-    "\n",
-    "Q: Repeat the previous computation with cache enabled on the RDDs.\n",
-    "\n",
-    "- Set up the RDDs."
+    "- Lets cache it and try again."
    ]
   },
   {
@@ -1651,40 +1648,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max = 100000\n",
-    "rdd1 = sc.parallelize(xrange(max))\n",
-    "rdd2 = rdd1.map(lambda x:x*x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Enable caching on `rdd1`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rdd1.cache();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Observe the performance."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "rdd2.cache()\n",
+    "%time rdd2.count()\n",
+    "%time rdd2.count()\n",
     "%time rdd2.count()"
    ]
   },
@@ -1692,38 +1658,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Enable caching on `rdd2`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rdd2.cache();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Observe the performance."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%time rdd2.count()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Caching the RDD speeds up the job because the RDD does not have to\n",
+    "  be computed from scratch again.\n",
+    "\n",
     "Notes\n",
     "-----\n",
     "\n",
@@ -1780,12 +1717,12 @@
     "Persistence Levels\n",
     "------------------\n",
     "\n",
-    "Level                       Meaning\n",
-    "-----                       -------\n",
-    "`MEMORY_ONLY`               Same as `cache()`\n",
-    "`MEMORY_AND_DISK`           Cache in memory then overflow to disk\n",
-    "`MEMORY_AND_DISK_SER`       Like above; in cache keep objects serialized instead of live \n",
-    "`DISK_ONLY`                 Cache to disk not to memory\n",
+    "Level                      |Meaning\n",
+    "-----                      |-------\n",
+    "`MEMORY_ONLY`              |Same as `cache()`\n",
+    "`MEMORY_AND_DISK`          |Cache in memory then overflow to disk\n",
+    "`MEMORY_AND_DISK_SER`      |Like above; in cache keep objects serialized instead of live \n",
+    "`DISK_ONLY`                |Cache to disk not to memory\n",
     "\n",
     "Notes\n",
     "-----\n",
