updating lecture_notes

--- a/lecture_notes.ipynb
+++ b/lecture_notes.ipynb
@@ -1,9 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "$.getScript('http://asimjalis.github.io/ipyn-ext/js/ipyn-present.js')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!-- \n",
+    "The ipynb was auto-generated from markdown using notedown.\n",
+    "Instead of modifying the ipynb file modify the markdown source. \n",
+    "-->\n",
+    "\n",
+    "<h1 class=\"tocheading\">Spark</h1>\n",
+    "<div id=\"toc\"></div>\n",
+    "\n",
     "<img src=\"images/spark-logo.png\">\n",
     "\n",
     "Apache Spark\n",
@@ -252,26 +270,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Use this to filter out non-primes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numbers = xrange(2,100)\n",
-    "primes = sc.parallelize(numbers)\\\n",
-    "    .filter(is_prime)\\\n",
-    "    .collect()\n",
-    "print primes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Use this to filter out non-primes.\n",
+    "        \n",
+    "        numbers = xrange(2,100)\n",
+    "        primes = sc.parallelize(numbers)\\\n",
+    "            .filter(is_prime)\\\n",
+    "            .collect()\n",
+    "        print primes\n",
+    "\n",
     "Pop Quiz\n",
     "--------\n",
     "\n",
@@ -837,26 +843,14 @@
     "11-18-2014  |113.94  |115.69  |113.89  |115.47  |44,200,300  |115.47\n",
     "11-17-2014  |114.27  |117.28  |113.30  |113.99  |46,746,700  |113.99\n",
     "\n",
-    "Here is what the CSV looks like:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csv = [\n",
-    "  \"#Date,Open,High,Low,Close,Volume,Adj Close\\n\",\n",
-    "  \"2014-11-18,113.94,115.69,113.89,115.47,44200300,115.47\\n\",\n",
-    "  \"2014-11-17,114.27,117.28,113.30,113.99,46746700,113.99\\n\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Here is what the CSV looks like:\n",
+    "    \n",
+    "    csv = [\n",
+    "      \"#Date,Open,High,Low,Close,Volume,Adj Close\\n\",\n",
+    "      \"2014-11-18,113.94,115.69,113.89,115.47,44200300,115.47\\n\",\n",
+    "      \"2014-11-17,114.27,117.28,113.30,113.99,46746700,113.99\\n\",\n",
+    "    ]\n",
+    "\n",
     "Lets find the date on which the price was the highest. \n",
     "\n",
     "\n",
