--- a/lecture_notes.ipynb
+++ b/lecture_notes.ipynb
@@ -118,9 +118,13 @@
     "- By default Spark logs messages at the `INFO` level.\n",
     "\n",
     "- Here are the steps to make it only print out warnings and errors.\n",
-    "    `cd $SPARK_HOME/conf`\n",
-    "    `cp log4j.properties.template log4j.properties`\n",
-    "    `sed -i.bak -e 's/rootCategory=INFO/rootCategory=ERROR/' log4j.properties`\n",
+    "\n",
+    "```sh\n",
+    "cd $SPARK_HOME/conf\n",
+    "cp log4j.properties.template log4j.properties\n",
+    "```\n",
+    "\n",
+    "- Edit `log4j.properties` and replace `rootCategory=INFO` with `rootCategory=ERROR`\n",
     "\n",
     "Spark Fundamentals\n",
     "==================\n",
@@ -209,6 +213,7 @@
     "\n",
     "Term                   |Meaning\n",
     "----                   |-------\n",
+    "RDD                    |*Resilient Distributed Dataset* or a distributed sequence of records\n",
     "Spark Job              |Sequence of transformations on data with a final action\n",
     "Spark Application      |Sequence of Spark jobs and other code\n",
     "Transformation         |Spark operation that produces an RDD\n",
@@ -270,14 +275,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Use this to filter out non-primes.\n",
-    "        \n",
-    "        numbers = xrange(2,100)\n",
-    "        primes = sc.parallelize(numbers)\\\n",
-    "            .filter(is_prime)\\\n",
-    "            .collect()\n",
-    "        print primes\n",
-    "\n",
+    "- Use this to filter out non-primes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = xrange(2,100)\n",
+    "primes = sc.parallelize(numbers)\\\n",
+    "    .filter(is_prime)\\\n",
+    "    .collect()\n",
+    "print primes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Pop Quiz\n",
     "--------\n",
     "\n",
