--- a/lectures/mh_Spark_Examples.ipynb
+++ b/lectures/mh_Spark_Examples.ipynb
@@ -53,7 +53,8 @@
     "`takeSample(withReplacement=True, n)`  |Create sample of n elements with replacement\n",
     "`sum()`                                |Find element sum (assumes numeric elements)\n",
     "`mean()`                               |Find element mean (assumes numeric elements)\n",
-    "`stdev()`                              |Find element deviation (assumes numeric elements)\n"
+    "`stdev()`                              |Find element deviation (assumes numeric elements)\n",
+    "`takeOrdered(n, function)`             |Returns n ordered elements as sorted by the value returned by the function"
    ]
   },
   {
@@ -113,7 +114,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -131,7 +132,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
